# aides-calculatrice-back

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  Procfile  README.md  pyproject.toml
explicabilite/: app.py
notebooks/: apl.ipynb  apl_logement_ordinaire.ipynb  apl_logement_ordinaire_interactif.ipynb  garantie_visale.ipynb  situation.py  utils.py  utils_apl.py  utils_calculate.py  utils_display.py  utils_mapping_simulateur.py  utils_widgets.py
payloads/: apl.json  apl_debug.json  apl_debug_response.json  apl_response.json  etudiant_10eme_decile.json  etudiant_10eme_decile_request.json  etudiant_1er_decile.json  etudiant_1er_decile_request.json
scripts/: docker-build.sh
