[tool.poetry]
name = "aides-calculatrice-back"
version = "0.0.0"
description = "Le dorsal d'aides-simplifiées"
authors = ["Aides Simplifiées <aides.simplifiees@numerique.gouv.fr>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openfisca-france = "^169.15.0"
openfisca-core = {extras = ["web-api"], version = "^43.2.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
